# seh

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  energy.json  energy.xlsx  main.py  pyproject.toml  seh.db  seh_energy_20260129_140344.csv
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  debugger.md
.claude/handoffs/: handoff-2026-01-02-1045.md
.claude/skills/: architect.md  handoff.md
.github/: ci-failure-issue.md  dependabot.yml
.github/workflows/: ci.yml
docs/: DATA_SCHEMA.md  REQUIREMENTS.md
scripts/: test_python_versions.sh
src/seh/: __init__.py  __main__.py  cli.py
src/seh/api/: __init__.py  client.py  rate_limiter.py
src/seh/api/models/: __init__.py  responses.py
src/seh/config/: __init__.py  logging.py  settings.py
src/seh/db/: __init__.py  base.py  engine.py  views.py
src/seh/db/models/: __init__.py  alert.py  battery.py  energy.py  environmental.py  equipment.py  inventory.py  inverter_telemetry.py  meter.py  optimizer_telemetry.py  power.py  site.py  sync_metadata.py
src/seh/db/repositories/: __init__.py  alert.py  base.py  battery.py  energy.py  environmental.py  equipment.py  inventory.py  inverter_telemetry.py  meter.py  optimizer_telemetry.py  power.py  site.py  sync_metadata.py
src/seh/sync/: __init__.py  orchestrator.py
src/seh/sync/strategies/: __init__.py  alert.py  base.py  energy.py  environmental.py  equipment.py  inventory.py  inverter_telemetry.py  meter.py  optimizer_telemetry.py  power.py  power_details.py  site.py  storage.py
src/seh/utils/: __init__.py  exceptions.py  retry.py
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_database_backends.py  test_models.py  test_repositories.py  test_sync_strategies.py
